--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "2",
     "chart.js": "^2.9.3",
     "core-js": "^3.3.2",
+    "node-sass": "^4.14.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
@@ -26,7 +31,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
-    "node-sass": "^4.12.0",
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10",
