--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/vue-fontawesome": "2",
     "chart.js": "^2.9.3",
     "core-js": "^3.3.2",
     "node-sass": "^4.14.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
+    "vue-awesome": "^4.1.0",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2",
