--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.3.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-awesome": "^4.1.0",
